--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -49,9 +49,9 @@ source = ~/.cache/wal/colors-hyprland.conf
 
 #Other settings of gaps, colors and border of widnows
 general {
-    gaps_in = 4
-    gaps_out = 8
-    border_size = 3
+    gaps_in = 1
+    gaps_out = 3
+    border_size = 2
 
     col.active_border = $color2
     col.inactive_border = $color15
@@ -69,7 +69,7 @@ decoration {
     rounding_power = 2
 
     active_opacity = 1.0
-    inactive_opacity = 0.95
+    inactive_opacity = 0.9
 
     shadow {
         enabled = false
@@ -186,6 +186,9 @@ windowrulev2 = size 700 500, class:^(blueman-manager)$
 windowrulev2 = float, class:^(xpad)$
 windowrulev2 = size 400 300, class:^(xpad)$
 windowrulev2 = opacity 0.9 override,class:^(thunderbird)$
+windowrulev2 = opacity 0.6 override,class:^(xpad)$
+windowrulev2 = opacity 0.4 override,class:^(spotify)$
+
 
 
 #---------------------------------------------------------------------------------------
