--- a/hypr/keybinds.conf
+++ b/hypr/keybinds.conf
@@ -87,16 +87,16 @@ bindel = ,XF86MonBrightnessUp, exec, brightnessctl s 10%+
 bindel = ,XF86MonBrightnessDown, exec, brightnessctl s 10%-
 
 # Computer multimedia keys for volume and LCD brightness
-bind = , F2, exec, brightnessctl set 10%-
-bind = , F3, exec, brightnessctl set +10%
+bind = $mainMod, F2, exec, brightnessctl set 10%-
+bind = $mainMod, F3, exec, brightnessctl set +10%
 
-bindel = ,F8, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
-bindel = ,F7, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
-bindel = ,F6, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
-bindel = ,F5, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
+bindel = $mainMod,F8, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
+bindel = $mainMod,F7, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
+bindel = $mainMod,F6, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
+bindel = $mainMod,F5, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
 
 # Requires playerctl
-bindl = , XF86AudioNext, exec, playerctl next
-bindl = , XF86AudioPause, exec, playerctl play-pause
-bindl = , XF86AudioPlay, exec, playerctl play-pause
-bindl = , XF86AudioPrev, exec, playerctl previous
+bindl = $mainMod, XF86AudioNext, exec, playerctl next
+bindl = $mainMod, XF86AudioPause, exec, playerctl play-pause
+bindl = $mainMod, XF86AudioPlay, exec, playerctl play-pause
+bindl = $mainMod, XF86AudioPrev, exec, playerctl previous
