--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -9,7 +9,7 @@ window_margin_width 8
 
 # Set up the background
 background_opacity 0.89
-background_blur 3
+background_blur 2
 
 
 
@@ -33,6 +33,8 @@ active_tab_foreground   #3F4451
 active_tab_background   #D7DAE0
 inactive_tab_foreground #ABB2BF
 inactive_tab_background #282C34
+hide_window_decorations yes
+
 
 # The 16 terminal colors
 
@@ -70,7 +72,7 @@ color15 #E6E6E6
 
 # Fonts
 
-font_size 12
+font_size 11
 font_family      JetBrains Mono
 bold_font        JetBrains Mono Bold
 italic_font      JetBrains Mono Italic
